# OFDM-Simulator

./: .gitignore  CMakeLists.txt  README.md  analyze.py
source/: channel.cpp  channel.h  convolutional_coder.cpp  convolutional_coder.h  log_file.cpp  log_file.h  main.cpp  ofdm.cpp  ofdm.h  qam.cpp  qam.h  receiver.cpp  receiver.h  transmitter.cpp  transmitter.h
source/tests/: conv_ber_test.cpp  ofdm_modulate_test.cpp  receiver_test.cpp  test.h  transmitter_test.cpp
